New login, edit and new password look

--- a/lib/ptr_web/templates/password/edit.html.eex
+++ b/lib/ptr_web/templates/password/edit.html.eex
@@ -1,39 +1,35 @@
-<section class="section">
-  <div class="container">
-    <div class="columns">
+<section class="hero is-light is-fullheight">
+  <div class="hero-body">
+    <div class="container has-text-centered">
       <div class="column is-half is-offset-one-quarter">
-        <article class="message">
-          <div class="message-header has-text-centered">
+        <div class="box">
+          <h2 class="title is-4 has-text-grey">
             <%= dgettext("passwords", "Enter a new password") %>
-          </div>
+          </h2>
 
-          <div class="message-body">
-            <%= form_for @changeset, password_path(@conn, :update, @token), [as: :user, method: :patch], fn f -> %>
-              <%= input f, :password, dgettext("users", "Password"),
-                input_html: [autofocus: true, class: "input is-medium", placeholder: dgettext("users", "Password")],
-                icons:      [left: "lock"],
-                label_html: [class: "label is-sr"] %>
+          <%= form_for @changeset, password_path(@conn, :update, @token), [as: :user, method: :patch], fn f -> %>
+            <%= input f, :password, dgettext("users", "Password"),
+              input_html: [autofocus: true, class: "input is-medium", placeholder: dgettext("users", "Password")],
+              icons:      [left: "lock"],
+              label_html: [class: "label is-sr"] %>
 
-              <%= input f, :password_confirmation, dgettext("users", "Password confirmation"),
-                input_html: [class: "input is-medium", placeholder: dgettext("users", "Password confirmation")],
-                icons:      [left: "check"],
-                label_html: [class: "label is-sr"] %>
+            <%= input f, :password_confirmation, dgettext("users", "Password confirmation"),
+              input_html: [class: "input is-medium", placeholder: dgettext("users", "Password confirmation")],
+              icons:      [left: "check"],
+              label_html: [class: "label is-sr"] %>
 
-              <div class="field">
-                <p class="control has-text-right">
-                  <%= submit dgettext("passwords", "Change password"), class: "button is-primary" %>
-                </p>
-              </div>
-            <% end %>
-          </div>
-        </article>
+            <div class="field">
+              <p>
+                <%= submit dgettext("passwords", "Change password"), class: "button is-dark is-medium" %>
+              </p>
+            </div>
+          <% end %>
+        </div>
 
-        <section class="section">
-          <p class="has-text-centered">
-            <%= dgettext("passwords", "Nevermind") %>,
-            <%= link dgettext("passwords", "go back to login"), to: session_path(@conn, :new) %>
-          </p>
-        </section>
+        <p>
+          <%= dgettext("passwords", "Nevermind") %>,
+          <%= link dgettext("passwords", "go back to login"), to: session_path(@conn, :new) %>
+        </p>
       </div>
     </div>
   </div>
