--- a/lib/ptr_web/templates/password/new.html.eex
+++ b/lib/ptr_web/templates/password/new.html.eex
@@ -1,14 +1,16 @@
-<section class="section">
-  <div class="container">
-    <div class="columns">
-      <div class="column is-half is-offset-one-quarter">
-        <article class="message">
-          <div class="message-header has-text-centered">
+<section class="hero is-light is-fullheight">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns">
+        <div class="column is-half is-offset-one-quarter">
+          <h2 class="title is-4 has-text-grey has-text-centered">
             <%= dgettext("passwords", "Forgot your password?") %>
-          </div>
+          </h2>
 
-          <div class="message-body">
-            <p><%= dgettext("passwords", "Enter your email address") %></p>
+          <div class="box">
+            <p class="has-text-grey">
+              <%= dgettext("passwords", "Enter your email address") %>
+            </p>
 
             <%= form_for @conn, password_path(@conn, :create), [as: :user], fn f -> %>
               <%= input f, :email, dgettext("users", "Email"),
@@ -17,20 +19,18 @@
                 label_html: [class: "label is-sr"] %>
 
               <div class="field">
-                <p class="control has-text-right">
-                  <%= submit dgettext("passwords", "Send verification email"), class: "button is-primary" %>
+                <p class="control has-text-centered">
+                  <%= submit dgettext("passwords", "Send verification email"), class: "button is-dark is-medium" %>
                 </p>
               </div>
             <% end %>
           </div>
-        </article>
 
-        <section class="section">
           <p class="has-text-centered">
             <%= dgettext("passwords", "Nevermind") %>,
             <%= link dgettext("passwords", "go back to login"), to: session_path(@conn, :new) %>
           </p>
-        </section>
+        </div>
       </div>
     </div>
   </div>
