--- a/lib/ptr_web/templates/session/new.html.eex
+++ b/lib/ptr_web/templates/session/new.html.eex
@@ -1,13 +1,13 @@
-<section class="section">
-  <div class="container">
-    <div class="columns">
-      <div class="column is-half is-offset-one-quarter">
-        <article class="message">
-          <div class="message-header has-text-centered">
-            <%= dgettext("sessions", "Log In") %>
-          </div>
+<section class="hero is-light is-fullheight">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <div class="columns">
+        <div class="column is-half is-offset-one-quarter">
+          <div class="box">
+            <h2 class="title is-4 has-text-grey">
+              <%= dgettext("sessions", "Log In") %>
+            </h2>
 
-          <div class="message-body">
             <%= form_for @conn, session_path(@conn, :create), [as: :session], fn f -> %>
               <%= input f, :email, dgettext("sessions", "Email"),
                 input_html: email_input_html(),
@@ -20,19 +20,17 @@
                 label_html: [class: "label is-sr"] %>
 
               <div class="field">
-                <p class="control has-text-right">
-                  <%= submit dgettext("sessions", "Login"), class: "button" %>
+                <p class="control has-text-centered">
+                  <%= submit dgettext("sessions", "Login"), class: "button is-dark is-medium" %>
                 </p>
               </div>
             <% end %>
           </div>
-        </article>
 
-        <section class="section">
-          <p class="has-text-centered">
+          <p>
             <%= link dgettext("sessions", "Forgot password?"), to: password_path(@conn, :new) %>
           </p>
-        </section>
+        </div>
       </div>
     </div>
   </div>
