--- a/lib/ptr_web/templates/layout/app.html.eex
+++ b/lib/ptr_web/templates/layout/app.html.eex
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="<%= locale() %>">
+<html class="<%= @current_session && "has-navbar-fixed-top" %>" lang="<%= locale() %>">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
