Fake links on table's tr

--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -2,6 +2,10 @@ a[disabled="disabled"] {
   pointer-events: none;
 }
 
+.has-cursor-pointer {
+  cursor: pointer;
+}
+
 .is-sr {
   position: absolute;
   width: 1px;
