--- a/lib/ptr_web/templates/user/index.html.eex
+++ b/lib/ptr_web/templates/user/index.html.eex
@@ -20,7 +20,7 @@
           </thead>
           <tbody>
             <%= for user <- @users do %>
-              <tr>
+              <tr class="has-cursor-pointer" data-link-like data-target=".fa-eye">
                 <td><%= user.name %></td>
                 <td><%= user.lastname %></td>
                 <td class="is-hidden-mobile"><%= user.email %></td>
