--- a/priv/templates/ptr.gen.html/index.html.eex
+++ b/priv/templates/ptr.gen.html/index.html.eex
@@ -17,7 +17,7 @@
           </thead>
           <tbody>
             <%%= for <%= schema.singular %> <- @<%= schema.plural %> do %>
-              <tr>
+              <tr class="has-cursor-pointer" data-link-like data-target=".fa-eye">
 <%= for {k, _} <- schema.attrs do %>                <td><%%= <%= schema.singular %>.<%= k %> %></td>
 <% end %>
                 <td>
