Use flash different if we are on hero sections

--- a/lib/ptr_web/templates/password/new.html.eex
+++ b/lib/ptr_web/templates/password/new.html.eex
@@ -1,4 +1,6 @@
 <section class="hero is-light is-fullheight">
+  <%= render_flash @conn, "_flash_head.html" %>
+
   <div class="hero-body">
     <div class="container">
       <div class="columns">
