Use data to target tr main link

--- a/lib/ptr_web/templates/cellar/index.html.eex
+++ b/lib/ptr_web/templates/cellar/index.html.eex
@@ -18,7 +18,7 @@
           </thead>
           <tbody>
             <%= for cellar <- @cellars do %>
-              <tr class="has-cursor-pointer" data-link-like data-target=".fa-eye">
+              <tr class="has-cursor-pointer" data-link-like data-target="[data-main-link]">
                 <td><%= cellar.name %></td>
                 <td><%= cellar.identifier %></td>
 
