--- a/lib/ptr_web/templates/vessel/index.html.eex
+++ b/lib/ptr_web/templates/vessel/index.html.eex
@@ -22,7 +22,7 @@
             <%= for vessel <- @vessels do %>
               <tr class="has-cursor-pointer" data-link-like data-target="[data-main-link]">
                 <td><%= vessel.identifier %></td>
-                <td><%= Decimal.round(vessel.capacity, 1) %></td>
+                <td><%= Decimal.round(vessel.capacity) %></td>
                 <td class="is-hidden-mobile"><%= Gettext.dgettext(PtrWeb.Gettext, "vessels", vessel.material || "") %></td>
                 <td class="is-hidden-mobile"><%= Gettext.dgettext(PtrWeb.Gettext, "vessels", vessel.cooling || "") %></td>
 
