Add vessel count to cellars

--- a/lib/ptr_web/templates/cellar/show.html.eex
+++ b/lib/ptr_web/templates/cellar/show.html.eex
@@ -15,10 +15,12 @@
             <span class="tag is-dark"><%= @cellar.identifier %></span>
           </li>
         </ul>
+
+        <hr>
+        <%= render_vessels(@conn, @account, @cellar) %>
       </div>
 
       <footer class="card-footer">
-        <%= link dgettext("vessels", "Vessels"), to: cellar_vessel_path(@conn, :index, @cellar), class: "card-footer-item" %>
         <%= link dgettext("cellars", "Edit"), to: cellar_path(@conn, :edit, @cellar), class: "card-footer-item" %>
       </footer>
     </div>
