Color turbolinks progress bar with bulma primary

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,5 +8,6 @@ $fa-font-path: "/fonts/font-awesome";
 @import "font-awesome";
 
 // App
-@import "main";
 @import "bulma_tweaks";
+@import "main";
+@import "turbolinks";
