--- a/lib/ptr_web/templates/layout/_menu.html.eex
+++ b/lib/ptr_web/templates/layout/_menu.html.eex
@@ -3,7 +3,7 @@
     <div class="navbar-brand">
       <%= link to: root_path(@conn, :index), class: "navbar-item is-hoverable" do %>
         <span class="icon">
-          <i class="fa fa-home" aria-hidden="true"></i>
+          <i class="fas fa-home" aria-hidden="true"></i>
         </span>
       <% end %>
 
@@ -30,7 +30,7 @@
         <div class="navbar-item has-dropdown is-hoverable">
           <div class="navbar-link">
             <span class="icon">
-              <i class="fa fa-user" aria-hidden="true"></i>
+              <i class="fas fa-user" aria-hidden="true"></i>
             </span>
           </div>
 
@@ -38,7 +38,7 @@
             <%= link to: session_path(@conn, :delete), method: :delete, class: "navbar-item" do %>
               <%= dgettext("sessions", "Logout") %>
               <span class="icon">
-                <i class="fa fa-sign-out" aria-hidden="true"></i>
+                <i class="fas fa-sign-out-alt" aria-hidden="true"></i>
               </span>
             <% end %>
           </div>
