Use colon after strong and not inside in shows

--- a/lib/ptr_web/templates/cellar/show.html.eex
+++ b/lib/ptr_web/templates/cellar/show.html.eex
@@ -11,7 +11,7 @@
 
         <ul>
           <li>
-            <strong><%= dgettext("cellars", "Identifier") %>:</strong>
+            <strong><%= dgettext("cellars", "Identifier") %></strong>:
             <span class="tag is-dark"><%= @cellar.identifier %></span>
           </li>
         </ul>
