--- a/lib/ptr_web/templates/lot/index.html.eex
+++ b/lib/ptr_web/templates/lot/index.html.eex
@@ -12,6 +12,7 @@
           <thead>
             <tr>
               <th><%= dgettext("lots", "Identifier") %></th>
+              <th class="is-hidden-mobile is-hidden-tablet-only"><%= dgettext("lots", "Cellar") %></th>
               <th><%= dgettext("lots", "Variety") %></th>
               <th class="is-hidden-mobile"><%= dgettext("lots", "Owner") %></th>
 
@@ -22,6 +23,7 @@
             <%= for lot <- @lots do %>
               <tr class="has-cursor-pointer" data-link-like data-target="[data-main-link]">
                 <td><%= lot.identifier %></td>
+                <td class="is-hidden-mobile is-hidden-tablet-only"><%= lot.cellar.name %></td>
                 <td><%= lot.variety.name %></td>
                 <td class="is-hidden-mobile"><%= lot.owner.name %></td>
 
