--- a/lib/ptr_web/templates/user/edit.html.eex
+++ b/lib/ptr_web/templates/user/edit.html.eex
@@ -4,9 +4,9 @@
       <div class="column is-half is-offset-one-quarter">
         <div class="card">
           <header class="card-header">
-            <p class="card-header-title">
+            <h2 class="card-header-title">
               <%= dgettext("users", "Edit user") %>
-            </p>
+            </h2>
           </header>
 
           <%= render "_form.html", Map.put(assigns, :action, user_path(@conn, :update, @user)) %>
