--- a/lib/ptr_web/templates/vessel/new.html.eex
+++ b/lib/ptr_web/templates/vessel/new.html.eex
@@ -4,9 +4,9 @@
       <div class="column is-half is-offset-one-quarter">
         <div class="card">
           <header class="card-header">
-            <p class="card-header-title">
+            <h2 class="card-header-title">
               <%= dgettext("vessels", "New vessel") %>
-            </p>
+            </h2>
           </header>
 
           <%= render "_form.html", Map.put(assigns, :action, cellar_vessel_path(@conn, :create, @cellar)) %>
