--- a/priv/templates/ptr.gen.html/new.html.eex
+++ b/priv/templates/ptr.gen.html/new.html.eex
@@ -4,9 +4,9 @@
       <div class="column is-half is-offset-one-quarter">
         <div class="card">
           <header class="card-header">
-            <p class="card-header-title">
+            <h2 class="card-header-title">
               <%%= dgettext("<%= schema.plural %>", "New <%= schema.singular %>") %>
-            </p>
+            </h2>
           </header>
 
           <%%= render "_form.html", Map.put(assigns, :action, <%= schema.route_helper %>_path(@conn, :create)) %>
