--- a/lib/ptr_web/templates/vessel/vessel.html.eex
+++ b/lib/ptr_web/templates/vessel/vessel.html.eex
@@ -1,8 +1,9 @@
 <tr class="has-cursor-pointer" data-link-like data-target="[data-main-link]">
   <td><%= @vessel.identifier %></td>
   <td><%= Decimal.round(@vessel.capacity) %></td>
-  <td class="is-hidden-mobile"><%= Gettext.dgettext(PtrWeb.Gettext, "vessels", @vessel.material || "") %></td>
-  <td class="is-hidden-mobile"><%= Gettext.dgettext(PtrWeb.Gettext, "vessels", @vessel.cooling || "") %></td>
+  <td class="is-hidden-mobile has-text-centered-vertically"><%= progress(@vessel, class: "progress is-small") %></td>
+  <td class="is-hidden-touch"><%= Gettext.dgettext(PtrWeb.Gettext, "vessels", @vessel.material || "") %></td>
+  <td class="is-hidden-touch"><%= Gettext.dgettext(PtrWeb.Gettext, "vessels", @vessel.cooling || "") %></td>
 
   <td>
     <div class="buttons has-addons is-right">
