--- a/assets/css/_bulma_tweaks.scss
+++ b/assets/css/_bulma_tweaks.scss
@@ -18,6 +18,12 @@
   padding: 1em 1em 1.5em;
 }
 
+.navbar-item.has-icon {
+  .icon {
+    margin: 0em .25em;
+  }
+}
+
 .section.flash-message {
   padding: 1em 0.5em 0em 0.5em;
 }
