--- a/lib/ptr_web/templates/vessel/show.html.eex
+++ b/lib/ptr_web/templates/vessel/show.html.eex
@@ -31,7 +31,25 @@
           </li>
         </ul>
 
-        <hr>
+        <%= if Enum.any?(@vessel.parts) do %>
+          <section class="section">
+            <div class="container">
+              <h3 class="title is-6">
+                <%= dgettext("vessels", "Parts") %>
+              </h3>
+
+              <ul>
+                <%= for part <- @vessel.parts do %>
+                  <li>
+                    <%= link to: lot_part_path(@conn, :show, part.lot, part) do %>
+                      <%= part.lot.identifier %> (<%= part.amount %> <em>L</em>)
+                    <% end %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+          </section>
+        <% end %>
 
         <%= progress(@vessel) %>
 
